# HumanAI.io

./: .gitignore  README.md  mypy.ini  pyproject.toml  requirements-lock.txt  requirements.txt  test.py
haio/: __init__.py  common.py  haio.py  haio_client.py  types.py
haio/worker_io/: __init__.py  bedrock_io.py  common.py  gemini_io.py  mturk_io.py  openai_io.py  types.py
test/: .gitignore  test.py  test1-ask_get_answer.py  test1.py  test10-resize_img.py  test11-force_choice.py  test2-wait.py  test2.py  test3-wait_multi.py  test3.py  test4-img.py  test5-cta.py  test6-worker_io.py  test7-gta.py  test8-sequential_cta.py  test9-img_path_to_url.py
