[project]
name = "HumanAI.io"
version = "0.0.0"
dependencies = [
  "icecream",
  "asyncio",
  "beautifulsoup4",
  "boto3",
  "boto3-stubs",
  "google-generativeai",
  "grpcio==1.67.1",         # 1.68.1 makes unnecessary WORNING, grpcio required by google-generativeai
  "httpx",
  "openai",
  "pillow",
  "python-dotenv",
  "scipy",
  "sortedcontainers",
  "sortedcontainers-stubs",
  "types-beautifulsoup4",
]

[tool.setuptools]
packages = ["haio"]
